[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrpv"
version = "1.0.0"
authors = [
  { name="Jakob Bossek", email="j.bossek@gmail.com" },
]
description = "Generate Discrete Random Probability Vectors"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    # "Programming Language :: Python :: 3.6",
    # "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
"Homepage" = "https://github.com/jakobbossek/pyrpv"
"Bug Tracker" = "https://github.com/jakobbossek/pyrpv/issues"
